--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
-<div id="tiktok-wrapper" style="height: 80vh; overflow-y: scroll; scroll-snap-type: y mandatory; background: #000; border-radius: 15px; position: relative;">
+<div id="tiktok-wrapper" style="height: 90vh; overflow-y: scroll; scroll-snap-type: y mandatory; background: #000; border-radius: 20px; border: 2px solid gold; scroll-behavior: smooth;">
     <div id="video-stream"></div>
 </div>
 
 <script>
-    // بيانات الفيديوهات
+    // بيانات الفيديوهات الملكية
     var vids = [
-        { id: 1, url: "https://www.w3schools.com/html/mov_bbb.mp4", name: "علوش_الإمبراطور", likes: 1500 },
-        { id: 2, url: "https://www.w3schools.com/html/horse.mp4", name: "فارس_المملكة", likes: 850 },
-        { id: 3, url: "https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4", name: "رعد_بغداد", likes: 2300 }
+        { id: 1, url: "https://www.w3schools.com/html/mov_bbb.mp4", name: "علوش_الإمبراطور", likes: "1.2M", comments: "14K" },
+        { id: 2, url: "https://www.w3schools.com/html/horse.mp4", name: "فارس_المملكة", likes: "850K", comments: "5K" },
+        { id: 3, url: "https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4", name: "رعد_بغداد", likes: "2.3M", comments: "20K" }
     ];
 
     var stream = document.getElementById('video-stream');
-    
-    // بناء المقاطع برمجياً بدون ظهور نصوص الكود
+    stream.innerHTML = ""; // تنظيف المحتوى القديم
+
     vids.forEach(function(v) {
         var post = document.createElement('div');
-        post.style.height = "100%";
+        // إجبار كل مقطع على أخذ مساحة الشاشة كاملة لتفعيل التمرير
+        post.style.height = "90vh"; 
         post.style.scrollSnapAlign = "start";
         post.style.position = "relative";
         post.style.background = "#000";
-        post.style.borderBottom = "2px solid #222";
+        post.style.borderBottom = "5px solid #111";
 
-        // تركيب العناصر يدوياً لضمان العمل
         post.innerHTML = `
-            <video width="100%" height="100%" loop autoplay muted style="object-fit:cover;">
+            <video width="100%" height="100%" loop autoplay muted style="object-fit:cover; pointer-events: none;">
                 <source src="${v.url}" type="video/mp4">
             </video>
-            <div style="position:absolute; right:15px; bottom:100px; text-align:center; color:white; z-index:10;">
-                <div onclick="this.style.color='red'; var c=this.nextSibling; c.innerText=parseInt(c.innerText)+1" style="font-size:35px; cursor:pointer;">❤️</div>
-                <div style="font-weight:bold;">${v.likes}</div>
-                <div style="font-size:35px; margin-top:20px; cursor:pointer;">💬</div>
-                <div style="font-weight:bold;">12</div>
+            
+            <div style="position:absolute; right:15px; bottom:120px; text-align:center; color:white; z-index:100; display:flex; flex-direction:column; gap:20px;">
+                <div onclick="this.style.color='red'; this.style.transform='scale(1.3)';" style="font-size:40px; cursor:pointer; transition:0.3s; filter: drop-shadow(0 0 5px black);">❤️</div>
+                <div style="font-weight:bold; text-shadow:2px 2px 5px black;">${v.likes}</div>
+                <div style="font-size:40px; cursor:pointer; filter: drop-shadow(0 0 5px black);">💬</div>
+                <div style="font-weight:bold; text-shadow:2px 2px 5px black;">${v.comments}</div>
+                <div style="background:gold; color:black; border-radius:50%; width:40px; height:40px; display:flex; align-items:center; justify-content:center; font-weight:bold; cursor:pointer; font-size:25px; box-shadow: 0 0 10px gold;">+</div>
             </div>
-            <div style="position:absolute; bottom:20px; left:15px; color:white; text-shadow:2px 2px 5px #000;">
-                <h4 style="margin:0; color:gold;">@${v.name}</h4>
-                <p style="margin:5px 0; font-size:14px;">فيديو ملكي حصري 👑</p>
+
+            <div style="position:absolute; bottom:40px; left:20px; color:white; text-shadow:2px 2px 8px #000; z-index:100;">
+                <h3 style="margin:0; color:gold; font-size:22px;">@${v.name}</h3>
+                <p style="margin:8px 0; font-size:16px; font-weight:bold;">حصرياً في إمبراطورية علوش 👑 #TikTok_King</p>
             </div>
         `;
         stream.appendChild(post);
