--- a/index.html
+++ b/index.html
@@ -1,60 +1,66 @@
-<div id="tiktok-wrapper" style="height: 90vh; overflow-y: scroll; scroll-snap-type: y mandatory; background: #000; border-radius: 20px; border: 2px solid gold; scroll-behavior: smooth;">
-    <div id="video-stream"></div>
-</div>
+// مكتبة المحتوى الملكي المتنوعة
+var kingdomLibrary = [
+    { url: "https://v1.assets.tumblr.com/tumblr_p9v5r4rW1G1x8r3wyo1.mp4", user: "خادم_الحسين", bio: "مقاطع دينية وحسينية 🏴", likes: "500K" },
+    { url: "https://www.w3schools.com/html/mov_bbb.mp4", user: "علوش_الإمبراطور", bio: "ملك البرمجة الحصري 👑", likes: "2M" },
+    { url: "https://www.w3schools.com/html/movie.mp4", user: "بنت_بغداد", bio: "يوميات عراقية 🇮🇶", likes: "1.2M" },
+    { url: "https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4", user: "المصمم_الملكي", bio: "ترندات وتصاميم حديثة 🔥", likes: "900K" }
+];
 
-<script>
-    // قاعدة بيانات الفيديوهات (سيتم تكرارها عشوائياً للأبد)
-    var videoPool = [
-        { url: "https://www.w3schools.com/html/mov_bbb.mp4", name: "علوش_الإمبراطور", likes: "1.2M" },
-        { url: "https://www.w3schools.com/html/horse.mp4", name: "فارس_المملكة", likes: "850K" },
-        { url: "https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4", name: "رعد_بغداد", likes: "2.3M" },
-        { url: "https://www.w3schools.com/html/movie.mp4", name: "صقر_المملكة", likes: "500K" }
-    ];
+// مصفوفة تعليقات وهمية لتبدو كأنها من "عالم وناس"
+var fakeComments = [
+    "الله يحفظك يا ملك", "مقطع روعة استمر", "يا حسين مظلوم 🏴", "عاشت ايدك علوش", 
+    "منور الإمبراطورية", "ترند جديد؟", "مبدع دائماً", "تحية من البصرة"
+];
 
+function addRealVarietyVideos(count) {
     var stream = document.getElementById('video-stream');
+    for (var i = 0; i < count; i++) {
+        var v = kingdomLibrary[Math.floor(Math.random() * kingdomLibrary.length)];
+        var post = document.createElement('div');
+        post.style.height = "90vh";
+        post.style.scrollSnapAlign = "start";
+        post.style.position = "relative";
+        post.style.background = "#000";
+        post.style.borderBottom = "5px solid #111";
 
-    // دالة إنشاء مقاطع جديدة وإضافتها للقائمة
-    function addMoreVideos(count) {
-        for (var i = 0; i < count; i++) {
-            var v = videoPool[Math.floor(Math.random() * videoPool.length)]; // اختيار فيديو عشوائي
-            var post = document.createElement('div');
-            post.className = 'video-card';
-            post.style.height = "90vh";
-            post.style.scrollSnapAlign = "start";
-            post.style.position = "relative";
-            post.style.background = "#000";
-            post.style.borderBottom = "4px solid #111";
-
-            post.innerHTML = `
-                <video width="100%" height="100%" loop autoplay muted style="object-fit:cover;">
-                    <source src="${v.url}" type="video/mp4">
-                </video>
-                
-                <div style="position:absolute; right:15px; bottom:120px; text-align:center; color:white; z-index:100; display:flex; flex-direction:column; gap:20px;">
-                    <div onclick="this.style.color='red'; this.style.transform='scale(1.3)';" style="font-size:40px; cursor:pointer; transition:0.3s;">❤️</div>
-                    <div style="font-weight:bold; text-shadow:2px 2px 5px black;">${v.likes}</div>
-                    <div style="font-size:40px; cursor:pointer;">💬</div>
-                    <div style="font-weight:bold; text-shadow:2px 2px 5px black;">${Math.floor(Math.random() * 99)}K</div>
-                    <div style="background:gold; color:black; border-radius:50%; width:40px; height:40px; display:flex; align-items:center; justify-content:center; font-weight:bold; cursor:pointer;">+</div>
+        post.innerHTML = `
+            <video width="100%" height="100%" loop autoplay muted style="object-fit:cover;">
+                <source src="${v.url}" type="video/mp4">
+            </video>
+            
+            <div style="position:absolute; right:15px; bottom:120px; text-align:center; color:white; z-index:100; display:flex; flex-direction:column; gap:15px;">
+                <div style="width:50px; height:50px; border-radius:50%; border:2px solid gold; overflow:hidden; margin-bottom:10px;">
+                    <img src="https://ui-avatars.com/api/?name=${v.user}&background=random" width="100%">
                 </div>
+                <div onclick="this.style.color='red'" style="font-size:35px; cursor:pointer;">❤️</div>
+                <div style="font-weight:bold;">${v.likes}</div>
+                <div onclick="openKingComments('${v.user}')" style="font-size:35px; cursor:pointer;">💬</div>
+                <div style="font-weight:bold;">${Math.floor(Math.random()*500)}</div>
+                <div style="background:gold; color:black; border-radius:50%; width:30px; height:30px; font-weight:bold; cursor:pointer; margin:0 auto;">+</div>
+            </div>
 
-                <div style="position:absolute; bottom:40px; left:20px; color:white; text-shadow:2px 2px 8px #000; z-index:100;">
-                    <h3 style="margin:0; color:gold;">@${v.name}_${Math.floor(Math.random() * 100)}</h3>
-                    <p style="margin:8px 0;">حصرياً في إمبراطورية علوش 👑 #اللانهائي</p>
-                </div>
-            `;
-            stream.appendChild(post);
-        }
+            <div style="position:absolute; bottom:40px; left:20px; color:white; text-shadow:2px 2px 8px #000; z-index:100;">
+                <h3 style="margin:0; color:gold;">@${v.user}</h3>
+                <p style="margin:5px 0; font-size:14px;">${v.bio}</p>
+                <div style="background:rgba(255,255,255,0.2); padding:5px 10px; border-radius:15px; font-size:12px; display:inline-block;">🎵 الصوت الأصلي - مملكة علوش</div>
+            </div>
+        `;
+        stream.appendChild(post);
     }
+}
 
-    // تحميل أول 10 مقاطع عند البدء
-    addMoreVideos(10);
-
-    // تفعيل حساس التمرير: إذا وصلت للنهاية، أضف 10 مقاطع أخرى فوراً
-    document.getElementById('tiktok-wrapper').addEventListener('scroll', function(e) {
-        var el = e.target;
-        if (el.scrollHeight - el.scrollTop <= el.clientHeight + 100) {
-            addMoreVideos(10); // إضافة فيديوهات جديدة كلما سحبت للأسفل
-        }
-    });
-</script>
+// دالة تفتح نافذة تعليقات فيها "ناس"
+function openKingComments(user) {
+    var commentSection = `
+        <div style="position:fixed; bottom:0; width:100%; height:50%; background:white; border-radius:20px 20px 0 0; z-index:2000; color:black; padding:20px; overflow-y:auto;">
+            <div style="display:flex; justify-content:space-between; border-bottom:1px solid #ddd; padding-bottom:10px;">
+                <b>التعليقات على منشور ${user}</b>
+                <button onclick="this.parentElement.parentElement.remove()" style="background:none; border:none; font-size:20px;">X</button>
+            </div>
+            <div id="comment-list" style="margin-top:15px;">
+                ${fakeComments.map(c => `<p style="margin:10px 0; border-bottom:1px solid #f0f0f0; padding-bottom:5px;"><b>فانز_المملكة:</b> ${c}</p>`).join('')}
+            </div>
+        </div>
+    `;
+    document.body.insertAdjacentHTML('beforeend', commentSection);
+}
